--- a/app/src/main/res/layout/single_photo.xml
+++ b/app/src/main/res/layout/single_photo.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
 
         <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_margin="20dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="2dp"
                 android:id="@+id/imageView"
         />
 
