--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,23 @@
         tools:context=".MainActivity">
 
 
-
     <FrameLayout
             android:id="@+id/page_fragment"
-            android:layout_width="411dp"
-            android:layout_height="677dp"
+            android:layout_width="408dp"
+            android:layout_height="714dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/nav_view"
+
+    />
+
+    <FrameLayout
+            android:id="@+id/full_screen_fragment"
+            android:layout_width="408dp"
+            android:layout_height="714dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
 
     />
 
