--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -4,7 +4,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".fragments.PhotoFragment">
+             tools:context=".fragments.AlbumFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -41,36 +41,46 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/recyclerView"
                 app:layout_constraintTop_toBottomOf="@id/album_text"
-                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 />
 
 
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_album_btn"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                app:fabSize="normal"
-                android:src="@drawable/ic_add_black_50dp"
-                android:layout_margin="32dp"
-                app:backgroundTint="@android:color/white"
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/recyclerView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+        >
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/camera_btn"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                app:fabSize="normal"
-                android:src="@drawable/ic_camera_alt_black_50dp"
-                android:layout_margin="32dp"
-                app:backgroundTint="@android:color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="32dp"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/add_album_btn"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    app:fabSize="normal"
+                    android:src="@drawable/ic_add_black_50dp"
+                    android:layout_margin="32dp"
+                    app:backgroundTint="@android:color/white"
+                    android:gravity="center"
 
-                />
+            />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/camera_btn"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    app:fabSize="normal"
+                    android:src="@drawable/ic_camera_alt_black_50dp"
+                    android:layout_margin="32dp"
+                    app:backgroundTint="@android:color/white"
+                    android:gravity="center"
+
+            />
+
+        </LinearLayout>
+
 
 
 
