--- a/app/src/main/res/layout/move_image.xml
+++ b/app/src/main/res/layout/move_image.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:gravity="center">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -10,16 +11,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/recyclerView"/>
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-        <Button
-                android:text="Cancel"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/cancel_btn"/>
+    <Button
+            android:text="Go Back"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/cancel_btn1"/>
 
-    </LinearLayout>
+
 </LinearLayout>
