--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -48,11 +48,13 @@
 
         <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@id/recyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
         >
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -63,7 +65,7 @@
                     android:src="@drawable/ic_add_black_50dp"
                     android:layout_margin="32dp"
                     app:backgroundTint="@android:color/white"
-                    android:gravity="center"
+
 
             />
 
@@ -75,7 +77,7 @@
                     android:src="@drawable/ic_camera_alt_black_50dp"
                     android:layout_margin="32dp"
                     app:backgroundTint="@android:color/white"
-                    android:gravity="center"
+
 
             />
 
