--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -3,6 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="#000000"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".fragments.ImageFragment">
 
@@ -14,20 +15,9 @@
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="2dp"
                 android:id="@+id/imageFull"
                 />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/backBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fabSize="normal"
-                android:src="@drawable/ic_arrow_back_black_24dp"
-                android:gravity="start"
-                android:layout_margin="32dp"
-
-                app:backgroundTint="@android:color/white"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/moveBtn"
@@ -37,7 +27,7 @@
                 android:src="@drawable/ic_move_black_24dp"
                 android:gravity="end"
                 android:layout_margin="32dp"
-
+                android:layout_marginTop="50dp"
                 app:backgroundTint="@android:color/white"/>
 
     </RelativeLayout>
