--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -16,6 +16,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
     />
+
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/take_photo"
                 android:layout_width="wrap_content"
@@ -23,8 +25,38 @@
                 app:fabSize="normal"
                 android:src="@drawable/ic_camera_alt_black_24dp"
                 android:layout_alignParentBottom="true"
-                android:layout_margin="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
                 android:layout_centerHorizontal="true"
+                app:backgroundTint="@android:color/white"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/flash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_flash_on_black_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
+                app:backgroundTint="@android:color/white"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/switch_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_switch_camera_black_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
+                android:layout_alignParentRight="true"
                 app:backgroundTint="@android:color/white"/>
 
     </RelativeLayout>
