--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,10 +3,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".fragments.MapFragment">
 
-
-
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <org.osmdroid.views.MapView
             android:id="@+id/map1"
@@ -16,4 +18,19 @@
             android:clickable="true"
             android:enabled="true" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/camera_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_camera_alt_black_50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
+                android:layout_centerHorizontal="true"
+                app:backgroundTint="@android:color/white"/>
+
+    </RelativeLayout>
 </FrameLayout>
