--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -22,32 +22,34 @@
         />
 
         <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:id="@+id/recyclerView"
+                android:layout_marginStart="2dp"
                 app:layout_constraintTop_toBottomOf="@+id/title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/btn1"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                app:fabSize="normal"
-                android:src="@drawable/ic_camera_alt_black_24dp"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="32dp"
-                android:layout_centerHorizontal="true"
-                app:backgroundTint="@android:color/white"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginBottom="68dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintHorizontal_bias="0.498"/>
+
 
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/camera_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fabSize="normal"
+            android:src="@drawable/ic_camera_alt_black_50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="85dp"
+            android:layout_centerHorizontal="true"
+            app:backgroundTint="@android:color/white"/>
+    </RelativeLayout>
 </FrameLayout>
