--- a/app/src/main/res/layout/single_photo.xml
+++ b/app/src/main/res/layout/single_photo.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
 
         <ImageView
-                android:layout_width="175dp"
-                android:layout_height="175dp"
+                android:layout_width="0dp"
+                android:layout_height="110dp"
+                android:layout_weight="2"
                 android:layout_margin="2dp"
                 android:id="@+id/imageView"
         />
