--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -19,6 +19,7 @@
                 android:text="All Photos"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:textColor="#A9A9A9"
                 android:background="@drawable/album_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -29,9 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Albums"
-                android:textSize="38sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
-                android:textColor="#A9A9A9"
                 android:layout_margin="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/all_albums"/>
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/recyclerView"
+                android:layout_marginBottom="60dp"
                 app:layout_constraintTop_toBottomOf="@id/album_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
