--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -17,6 +17,19 @@
             app:layout_constraintEnd_toEndOf="parent"
     />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_centerHorizontal="true"
+                app:backgroundTint="@android:color/white"/>
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/take_photo"
@@ -28,7 +41,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="85dp"
+                android:layout_marginBottom="50dp"
                 android:layout_centerHorizontal="true"
                 app:backgroundTint="@android:color/white"/>
 
@@ -42,7 +55,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="85dp"
+                android:layout_marginBottom="30dp"
                 app:backgroundTint="@android:color/white"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -55,7 +68,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="85dp"
+                android:layout_marginBottom="30dp"
                 android:layout_alignParentRight="true"
                 app:backgroundTint="@android:color/white"/>
 
