--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -7,7 +7,6 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".fragments.ImageFragment">
 
-
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -20,14 +19,43 @@
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                app:backgroundTint="@android:color/white"/>
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/moveBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fabSize="normal"
                 android:src="@drawable/ic_move_black_24dp"
-                android:gravity="end"
-                android:layout_margin="32dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
+                android:layout_alignParentBottom="true"
+                app:backgroundTint="@android:color/white"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/delete_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="normal"
+                android:src="@drawable/ic_delete_black_24dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="85dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 app:backgroundTint="@android:color/white"/>
 
     </RelativeLayout>
