--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -6,38 +6,71 @@
              android:layout_height="match_parent"
              tools:context=".fragments.PhotoFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/title"
+        <RelativeLayout
+                android:id="@+id/titleBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:textSize="32sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-        />
+                android:layout_height="match_parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/back_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:fabSize="normal"
+                    android:src="@drawable/ic_arrow_back_black_24dp"
+                    android:layout_margin="10dp"
+                    android:layout_alignParentTop="true"
+                    app:backgroundTint="@android:color/white"/>
+
+            <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:textSize="32sp"
+                    android:textStyle="bold"/>
+
+            <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="50dp"
+                    android:minWidth="50dp"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:indeterminate="false"
+                    android:max="50"
+                    android:progress="1"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+            <ProgressBar
+                    android:id="@+id/progressBarCircle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="50dp"
+                    android:minWidth="50dp"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="80dp"
                 android:layout_marginStart="2dp"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:layout_marginBottom="60dp"
+
+                />
 
 
 
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/camera_btn"
             android:layout_width="wrap_content"
