--- a/app/src/main/res/drawable/album_back_recycler.xml
+++ b/app/src/main/res/drawable/album_back_recycler.xml
@@ -4,10 +4,9 @@
     <item>
         <shape android:shape="rectangle" >
             <solid android:color="#696969" />
-            <stroke android:color="#696969" />
         </shape>
     </item>
-    <item android:bottom="1dp">
+    <item android:top="1dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
         </shape>
