--- a/app/src/main/res/layout/add_album.xml
+++ b/app/src/main/res/layout/add_album.xml
@@ -4,9 +4,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-
     <EditText
-            android:hint="Album Name"
+            android:hint="@string/album_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/album_name"/>
@@ -18,12 +17,12 @@
             android:layout_centerHorizontal="true">
 
         <Button
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/cancel_btn"/>
         <Button
-                android:text="Add"
+                android:text="@string/add"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/add_btn"/>
