--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -4,6 +4,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="#f2f2f2"
              tools:context=".fragments.AlbumFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +17,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:padding="10dp"
-                android:text="All Photos"
+                android:text="@string/all_photos"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textColor="#A9A9A9"
@@ -29,7 +30,7 @@
                 android:id="@+id/album_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Albums"
+                android:text="@string/albums"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:layout_margin="25dp"
