--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -4,6 +4,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="#f2f2f2"
              tools:context=".fragments.PhotoFragment">
 
 
@@ -59,16 +60,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginBottom="60dp"
-
-                />
-
-
-
-
-
-
+                android:layout_marginStart="1dp"
+                android:layout_marginBottom="60dp"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
