--- a/app/src/main/res/layout/move_image.xml
+++ b/app/src/main/res/layout/move_image.xml
@@ -13,7 +13,7 @@
 
 
     <Button
-            android:text="Go Back"
+            android:text="@string/go_back"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/cancel_btn1"/>
