--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:textSize="32sp"
                     android:textStyle="bold"/>
 
